Fixed background images size that were showing scrollbar

--- a/css/custom.scss
+++ b/css/custom.scss
@@ -97,7 +97,7 @@ body {
 #user-error,
 #admin-error {
     background-image: url(../images/plane_moon.jpg);
-    height: 99vh;
+    height: 98vh;
     background-repeat: no-repeat;
     background-size: cover;
     overflow: hidden;
@@ -137,7 +137,7 @@ body {
 #user-home,
 #admin-dashboard {
     background-image: url(../images/airplane_bg.jpg);
-    height: 99vh;
+    height: 98vh;
     background-repeat: no-repeat;
     background-size: cover;
     overflow: hidden;
